--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>TestBranch</title>
   </head>
   <body>
-    <h2>This is the Test Branch</h2>
+    <h2>This is the Test Branch. I have updated it more</h2>
   </body>
 </html>
